Prawdopodobnie dobry DFS